Fixed mobile comment reply overlap

--- a/assets/css/style.less
+++ b/assets/css/style.less
@@ -900,6 +900,13 @@ body {
             top: 15px;
             right: 15px;
 
+            @media screen and (max-width: 782px) {
+              position: relative;
+              text-align: right;
+              top: 0;
+              right: 0;
+            }
+
             .comment-reply-link {
               display: inline-block;
               padding: 6px 12px;
